--- a/add-on_website/index.html
+++ b/add-on_website/index.html
@@ -185,26 +185,47 @@
 <script src="https://cdn.jsdelivr.net/npm/vexflow@4.2.2/build/cjs/vexflow.js"></script>
 <div id="PARTITION-DIV">
     <script>
-        const {Factory, EasyScore, System} = Vex.Flow;
+        // This approach to importing classes works in CJS contexts (i.e., a regular <script src="..."> tag).
+        const { Stave, StaveNote, Beam, Formatter, Renderer } = Vex;
 
-        const vf = new Factory({
-            renderer: {elementId: 'PARTITION-DIV', width: 500, height: 200},
-        });
+        // Create an SVG renderer and attach it to the DIV element with id="output".
+        const div = document.getElementById("PARTITION-DIV");
+        const renderer = new Renderer(div, Renderer.Backends.SVG);
 
-        const score = vf.EasyScore();
-        const system = vf.System();
+        // Configure the rendering context.
+        renderer.resize(720, 130);
+        const context = renderer.getContext();
 
-        system
-            .addStave({
-                voices: [
-                    score.voice(score.notes('C#5/q, B4, A4, G#4', {stem: 'up'})),
-                    score.voice(score.notes('C#4/h, C#4', {stem: 'down'})),
-                ],
-            })
-            .addClef('treble')
-            .addTimeSignature('4/4');
+        // Measure 1
+        const staveMeasure1 = new Stave(10, 0, 300);
+        staveMeasure1.addClef("treble").setContext(context).draw();
 
-        vf.draw();
+        const notesMeasure1 = [new StaveNote({ keys: ["e/4"], duration: "2" }), new StaveNote({ keys: ["d/4"], duration: "q" }), new StaveNote({ keys: ["b/4"], duration: "qr" }), new StaveNote({ keys: ["c/4", "e/4", "g/4"], duration: "q" })];
+
+        // Helper function to justify and draw a 4/4 voice
+        Formatter.FormatAndDraw(context, staveMeasure1, notesMeasure1);
+
+        // Measure 2 - second measure is placed adjacent to first measure.
+        const staveMeasure2 = new Stave(staveMeasure1.width + staveMeasure1.x, 0, 400);
+
+        const notesMeasure2_part1 = [new StaveNote({ keys: ["c/4"], duration: "8" }), new StaveNote({ keys: ["d/4"], duration: "8" }), new StaveNote({ keys: ["b/4"], duration: "8" }), new StaveNote({ keys: ["c/4", "e/4", "g/4"], duration: "8" })];
+
+        //const notesMeasure2_part2 = [new StaveNote({ keys: ["c/4"], duration: "8" }), new StaveNote({ keys: ["d/4"], duration: "8" }), new StaveNote({ keys: ["b/4"], duration: "8" }), new StaveNote({ keys: ["c/4", "e/4", "g/4"], duration: "8" })];
+
+        // Create the beams for 8th notes in second measure.
+        const beam1 = new Beam(notesMeasure2_part1);
+        //const beam2 = new Beam(notesMeasure2_part2);
+
+        //const notesMeasure2 = notesMeasure2_part1.concat(notesMeasure2_part2);
+
+        staveMeasure2.setContext(context).draw();
+        Formatter.FormatAndDraw(context, staveMeasure2, notesMeasure2_part1);
+
+        // Render beams
+        beam1.setContext(context).draw();
+        beam2.setContext(context).draw();
+
+
     </script>
 </div>
 </body>
