--- a/add-on_website/index.html
+++ b/add-on_website/index.html
@@ -2,21 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Music writer</title>
+    <title>MusicML</title>
     <style>
+        body {
+            font-family: 'Arial', sans-serif; /* Police moderne */
+            background-color: #f4f4f4; /* Couleur de fond légère */
+        }
         #textArea {
-            width: 300px;
-            height: 200px;
+            width: 100%;
+            height: 400px;
+            border: 1px solid #5b5b5b; /* Bordure subtile */
+            border-radius: 10px; /* Coins arrondis */
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Ombre légère */
+            font-size: 1.5em;
+            resize: vertical; /* Permet de redimensionner verticalement */
+        }
+        #loaderContainer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: fixed; /* Position fixe sur toute la page */
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(134, 134, 134, 0.5); /* Fond gris clair semi-transparent */
+            z-index: 1000; /* S'assure que le loader est au-dessus des autres éléments */
+        }
+        .loader {
+            border: 5px solid #f3f3f3;
+            border-top: 5px solid #3498db;
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+            animation: spin 2s linear infinite;
+            margin: auto;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        #sendButton {
+            display: block;
+            width: 80%;
+            padding: 10px 20px;
+            margin: 20px auto;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            cursor: pointer;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        #sendButton:hover {
+            background-color: #2980b9;
         }
     </style>
 </head>
 <body>
+<h1>Write your music using MusicML language and generate a midi file!</h1>
 <textarea id="textArea" placeholder="Write your music here..."></textarea>
+<br>
 <button id="sendButton">Generate midi file</button>
+
+<div id="loaderContainer" style="display: none;">
+    <div class="loader"></div>
+</div>
 
 <script>
     document.getElementById('sendButton').addEventListener('click', function() {
         var text = document.getElementById('textArea').value;
+
+        var loaderContainer = document.getElementById('loaderContainer');
+        loaderContainer.style.display = 'flex';
 
         const fetchUrl = window.location.hostname === 'localhost' ? 'http://localhost:80' : 'https://musicml.orch-team-d.pns-projects.fr.eu.org';
 
@@ -27,9 +86,14 @@
                 'Content-Type': 'application/json'
             }
         })
-            .then(response => response.blob())
+            .then(response =>{
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.blob()
+            })
             .then(blob => {
-                // Création d'un lien pour télécharger le fichier MIDI
+                loaderContainer.style.display = 'none';
                 const url = window.URL.createObjectURL(blob);
                 const a = document.createElement('a');
                 a.style.display = 'none';
@@ -39,9 +103,16 @@
                 a.click();
                 window.URL.revokeObjectURL(url);
             })
-            .catch(error => console.error('Erreur lors de l\'envoi:', error));
+            .catch(error => {
+                console.error('Error when retrieving midi file', error);
+                loaderContainer.style.display = 'none';
+                alert('Error when retrieving midi file');
+            });
     });
 </script>
+</body>
+</html>
+
 <script src="https://cdn.jsdelivr.net/npm/vexflow@4.2.2/build/cjs/vexflow.js"></script>
 <div id="PARTITION-DIV">
     <script>
