--- a/add-on_website/index.html
+++ b/add-on_website/index.html
@@ -5,29 +5,30 @@
     <title>MusicML</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif; /* Police moderne */
-            background-color: #f4f4f4; /* Couleur de fond légère */
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
         }
         #textArea {
             width: 100%;
             height: 400px;
-            border: 1px solid #5b5b5b; /* Bordure subtile */
-            border-radius: 10px; /* Coins arrondis */
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Ombre légère */
+            border: 1px solid #5b5b5b;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             font-size: 1.5em;
-            resize: vertical; /* Permet de redimensionner verticalement */
+            resize: vertical;
         }
-        #loaderContainer {
-            display: flex;
+        #loaderContainer, #errorContainer {
+            display: none;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            position: fixed; /* Position fixe sur toute la page */
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(134, 134, 134, 0.5); /* Fond gris clair semi-transparent */
-            z-index: 1000; /* S'assure que le loader est au-dessus des autres éléments */
+            background-color: rgba(0, 0, 0, 0.85);
+            z-index: 1000;
         }
         .loader {
             border: 5px solid #f3f3f3;
@@ -36,13 +37,12 @@
             width: 100px;
             height: 100px;
             animation: spin 2s linear infinite;
-            margin: auto;
         }
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
-        #sendButton {
+        .button {
             display: block;
             width: 80%;
             padding: 10px 20px;
@@ -58,24 +58,43 @@
         #sendButton:hover {
             background-color: #2980b9;
         }
+        .error-message {
+            color: red;
+            margin: 15px;
+            white-space: pre-wrap;
+        }
     </style>
 </head>
 <body>
 <h1>Write your music using MusicML language and generate a midi file!</h1>
+<p>Learn how to write using MusicML language <a href="https://github.com/TobiasBonifay/dsl-midi_MusicDSL?tab=readme-ov-file#basic-example" target="_blank">here</a></p>
 <textarea id="textArea" placeholder="Write your music here..."></textarea>
 <br>
-<button id="sendButton">Generate midi file</button>
+<button id="sendButton" class="button">Generate midi file</button>
 
-<div id="loaderContainer" style="display: none;">
+<div id="loaderContainer">
     <div class="loader"></div>
+</div>
+
+<div id="errorContainer" style="display: none;">
+    <h1 class="error-message">Error when generating midi file</h1>
+    <p class="error-message" id="errorMessage"></p>
+    <button class=button onclick="document.getElementById('errorContainer').style.display='none'">Close</button>
 </div>
 
 <script>
     document.getElementById('sendButton').addEventListener('click', function() {
         var text = document.getElementById('textArea').value;
-
         var loaderContainer = document.getElementById('loaderContainer');
+        var errorContainer = document.getElementById('errorContainer');
         loaderContainer.style.display = 'flex';
+
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                event.preventDefault();
+                errorContainer.style.display = 'none';
+            }
+        });
 
         const fetchUrl = window.location.hostname === 'localhost' ? 'http://localhost:80' : 'https://musicml.orch-team-d.pns-projects.fr.eu.org';
 
@@ -88,7 +107,7 @@
         })
             .then(response =>{
                 if (!response.ok) {
-                    throw new Error('Network response was not ok');
+                    throw response;
                 }
                 return response.blob()
             })
@@ -104,9 +123,12 @@
                 window.URL.revokeObjectURL(url);
             })
             .catch(error => {
-                console.error('Error when retrieving midi file', error);
+                error.text().then(errorMessage => {
+                    console.error("Error while retrieving midi file", errorMessage);
+                    document.getElementById('errorMessage').textContent = errorMessage;
+                    document.getElementById('errorContainer').style.display = 'flex';
+                });
                 loaderContainer.style.display = 'none';
-                alert('Error when retrieving midi file');
             });
     });
 </script>
