--- a/add-on_website/index.html
+++ b/add-on_website/index.html
@@ -79,7 +79,7 @@
 
         /** second error message only using nth-child(2) **/
         .error-message:nth-child(2) {
-            overflow: scroll;
+            overflow: auto;
             max-width: 90%;
         }
     </style>
