--- a/add-on_website/index.html
+++ b/add-on_website/index.html
@@ -231,22 +231,27 @@
                     const div = document.getElementById("PARTITION-DIV");
                     const renderer = new Renderer(div, Renderer.Backends.SVG);
                     // Configure the rendering context.
-                    renderer.resize(720, 130);
+                    renderer.resize(920, 140);
                     const context = renderer.getContext();
+
+                    let staves = [];
+                    let i = 0; // counter
 
                     // Loop through bars
                     bars.forEach(barData => {
                         const bar = barData;
 
                         // Create a stave for each bar
-                        const stave = new Vex.Flow.Stave(10, 0, 400);
-
-                        // Add timeSignature if needed
-                        if (barData.timeSignature !== timeSignatureGlobal) {
-                            stave.addTimeSignature(bar.timeSignature);
-                        } else {
+                        let x = (i === 0) ? 10 : (staves[i-1].width + staves[i-1].x);
+                        const stave = new Vex.Flow.Stave(x, 0, 400);
+                        if (i === 0) {
                             stave.addTimeSignature(timeSignatureGlobal);
+                            stave.addClef("treble").setContext(context).draw();
+                        } else {
+                            stave.setContext(context).draw();
                         }
+                        staves.push(stave);
+                        i++;
 
                         // Loop through tracks
                         bar.tracks.forEach(track => {
@@ -270,6 +275,7 @@
 
                             // Add the notes to the array of Vex Flow elements
                             vexElements.push({ stave, notes });
+                            return; //first track only
                         });
                     });
 
