--- a/add-on_website/index.html
+++ b/add-on_website/index.html
@@ -209,7 +209,9 @@
         }
 
         document.getElementById('showPartition').addEventListener('click', function () {
-            fetch('http://localhost:80/getPartition') // todo replace by server ip
+            const fetchUrl = window.location.hostname === 'localhost' ? 'http://localhost:80' : 'https://musicml.orch-team-d.pns-projects.fr.eu.org';
+
+            fetch(fetchUrl)
                 .then(response => {
                     if (!response.ok) {
                         throw new Error(`Erreur de réseau: ${response.status}`);
